# -

./: .gitignore  01_Qwen3.py  01_看qwen3源码的注意事项.md  02_sft_demo.ipynb  GITHUB.md  README.md  USAGE.md  clean-content.py  convert-obsidian-simple.py  convert-obsidian.py  convert-to-vitepress.py  extract-all-content.py  extract-code-v2.py  extract-code-v3.py  extract-code.py  extract-content-v2.py  extract-content.py  fix-format.py  modelshit-content.md  modelshit-v2.md  package-lock.json  package.json  ppo-math-page.html  ppo-page.html  pyproject.toml  raw-page.html  requirements.txt  setup_git.sh  vercel.json  大模型微调所有图.drawio
.github/workflows/: deploy.yml
01_LLM/: microgpt.md
02_RL_Basics/: concepts.md
03_Policy_Gradient/: reinforce.md
04_PPO/: implementation.md  theory.md
05_RLHF/: dpo.md  grpo.md
06_Multimodal/: vit.md
code/: __init__.py
code/policy_gradient/: reinforce.py
code/ppo/: ppo.py
code/rl_basics/: cartpole_env.py
docs/: README.md  index.md
docs/.vitepress/: config.mts
docs/01-llm/: 01-microgpt.md  02-llm-intro.md  03-gpt2.md
docs/02-rl-basics/: 01-concepts.md  02-value-function.md  03-bellman-equation.md
docs/03-policy-gradient/: 01-vanilla-pg.md  02-reinforce.md  03-baseline.md  04-actor-critic.md  05-gae.md
docs/04-ppo/: 01-theory.md  02-implementation.md  03-math.md
docs/05-rlhf/: 01-dpo.md  02-grpo.md  03-grpo-app.md
docs/06-multimodal/: 01-vit.md  02-clip.md  03-diffusion.md
modelshit-chapters/: 01-rl-intro.md  03-ppo.md  05-ppo-math.md
tools/: extract_pdf.py  generate_all_docs.py
强化学习/: test.py  策略梯度.py
(+30 files in other folders)
